...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_layout_artist">

        <!-- RecyclerView for Artists -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artists_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clipToPadding="false"
            android:overScrollMode="ifContentScrolls"
...
